# medical_anchor

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  supervisord.conf
.github/workflows/: push-hf-space.yml
app/: api.py  chunk_dailymed.py  chunking.py  config.py  dedup_dailymed.py  download_dailymed.py  ingest.py  ingest_dailymed.py  ner.py  parse_dailymed.py  parse_medlineplus.py  retrieval.py  ui.py  utils.py
app/core/: chunking.py  hf_dataset.py
app/pipelines/: push_hf_dataset.py  run_dailymed.py  run_medlineplus.py
app/sources/dailymed/: chunk.py  download.py  ingest.py  transform.py
app/sources/medlineplus/: download.py  ingest.py  parse.py
scripts/: inspect_chunking.py  inspect_chunking_dailymed.py  inspect_dailymed_dedup.py  inspect_dailymed_parser.py  inspect_ingest.py  inspect_ingest_dailymed.py  inspect_ner.py  inspect_parser.py  inspect_retrieval.py
scripts/dailymed/: inspect_chunking.py  inspect_dedup.py  inspect_ingest.py  inspect_parser.py
scripts/medlineplus/: inspect_chunking.py  inspect_download.py  inspect_ingest.py  inspect_parser.py
scripts/samples/: allergic_rhinitis.txt
tests/: test_xss_rendering.py
