[tool.poetry]
name = "medical-rag"
version = "0.1.0"
description = ""
package-mode = false
authors = ["gylrt"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
onnxruntime = "1.23.2"
lxml = ">=6.0.2,<7.0.0"
beautifulsoup4 = ">=4.14.3,<5.0.0"
sentence-transformers = ">=5.2.3,<6.0.0"
chromadb = ">=1.5.1,<2.0.0"
fastapi = ">=0.133.1,<0.134.0"
uvicorn = ">=0.41.0,<0.42.0"
python-dotenv = ">=1.2.1,<2.0.0"
transformers = ">=4.40.0,<5.0.0"
torch = ">=2.0.0,<2.10.0"
nltk = "^3.9.3"
pydantic-settings = "^2.13.1"
rapidfuzz = "^3.14.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.15.2,<0.16.0"
ipykernel = ">=7.2.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
